Fix: select button text not visible on hover

--- a/projects/web/src/app/shared/components/select-button/select-button.component.scss
+++ b/projects/web/src/app/shared/components/select-button/select-button.component.scss
@@ -33,3 +33,10 @@
     justify-content: center;
     align-items: center;
 }
+
+
+
+// Select Button - Hover
+.select-button:hover {
+    color: var(--bs-btn-color);
+}
